# SQRS-final-project

./: README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yaml
.streamlit/: config.toml  secrets.toml
backend/: .coverage  .dockerignore  Dockerfile  finance.db  finance_tracker.db  pyproject.toml
backend/finance_tracker/: database.py  main.py  models.py
backend/tests/: test_database.py  test_main.py  test_models.py
finance_tracker/: database.py  main.py  models.py
frontend/: LICENSE  README.md  pyproject.toml
frontend/.streamlit/: secrets.toml
frontend/src/personal_finance_tracker_front/: api.py  main.py
frontend/tests/: test_api.py  test_main.py
prometheus/: prometheus.yml
src/personal_finance_tracker_front/: api.py  main.py
