[tool.poetry]
name = "personal-finance-tracker-front"
version = "0.1.0"
description = ""
authors = ["paveltrty <p.sharygin@innopolis.university>"]
readme = "README.md"
packages = [{include = "personal_finance_tracker_front", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"
pandas = "^2.2.3"
plotly = "^6.0.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
requests-mock = "^1.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"